--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@anthropic-ai/sdk": "^0.32.1",
     "@google-cloud/vision": "^5.3.4",
     "@neondatabase/serverless": "^0.10.3",
+    "@types/bcryptjs": "^2.4.6",
     "@vapi-ai/web": "^2.5.2",
     "@vercel/blob": "^2.0.0",
+    "bcryptjs": "^3.0.3",
     "drizzle-orm": "^0.36.4",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.469.0",
