--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next": "^16.1.1",
     "pg": "^8.16.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "replicate": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^22",
